manifests/workshop-cheatsheet/network-policy/reddog-ns-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
  namespace: reddog
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: reddog
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
